exercise/ckad/nevatest.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nevatest
    type: tester
  name: nevatest
spec:
  containers:
  - image: busybox
    name: nevatest
    command: ["sh", "-c", "sleep infinity"]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
