exercise/ckad/oregonpod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: oregonpod
  name: oregonpod
spec:
  containers:
    - image: nginx
      name: oregonpod
      volumeMounts:
        - name: config-vol
          mountPath: /usr/share/nginx/html
  volumes:
    - name: config-vol
      configMap:
        name: task3cm
        items:
          - key: index.html
            path: index.html
