exercise/ckad/probepod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: probepod
  name: probepod
  namespace: probes
spec:
  containers:
  - image: busybox
    name: probepod
    command: ['sh', '-c', 'sleep infinity']
  restartPolicy: Always
