exercise/ckad/sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: sidepod
  name: sidepod
spec:
  containers:
    - name: myapp
      image: nginx:latest
      volumeMounts:
        - name: data
          mountPath: /opt
  volumes:
    - name: data
      emptyDir: {}
