exercise/ckad/task1-inpod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: inpod
  name: inpod
  namespace: indiana
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: inpod
  dnsPolicy: ClusterFirst
  restartPolicy: Always
