exercise/ckad/task10-mem.yaml
apiVersion: v1
kind: Pod
metadata:
  name: snowdeploy
  namespace: nabraska
spec:
  containers:
  - name: memory-demo-ctr
    image: nginx:latest
    resources:
      requests:
        memory: "64Mi"
      limits:
        memory: "128Mi"
