exercise/ckad/task12-newbirds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: newbirds
    type: allbirds
  name: newbirds
  namespace: birds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newbirds
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: newbirds
        type: allbirds
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        resources: {}
status: {}
