exercise/ckad/task15.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod
  name: pod
  namespace: oklahoma
spec:
  serviceAccountName: secure
  containers:
  - args:
    - securepod
    image: nginx:latest
    name: pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
