exercise/ckad/task3-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: oregonpod
spec:
  containers:
    - name: oregonpod
      image: nginx
      volumeMounts:
      - name: config-volume
        mountPath: /usr/share/nginx/html
  volumes:
    - name: config-volume
      configMap:
        name: task3cm
  restartPolicy: Never
