exercise/ckad/task4-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sidepod
spec:
      containers:
        - name: myapp
          image: nginx:latest
