exercise/ckad/task6.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: updates
    type: prod
  name: updates
spec:
  replicas: 3
  selector:
    matchLabels:
      app: updates
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: updates
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        resources: {}
status: {}
