exercise/ckad/task8-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-np
spec:
  podSelector:
    matchLabels:
      type: webapp
  ingress:
  - from:
    - podSelector:
        matchLabels:
          type: tester
